--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -39,6 +39,17 @@ $p-text: 'Radley', serif;
 //     color: #f2ff80;
 //   }
 
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 body.dark-theme {
     div, hr, .events, #hamburger-icon {
         background: $dark-primary-color;
